--- a/index.html
+++ b/index.html
@@ -1,59 +1,13 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">;
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>  
-        <div class="modal__body">
-            <div class="modal__inner" >
-                <div class="auth-form__container"> 
-
-                    <div class="auth-form__form">
-
-                        <div class="auth-form_header">
-                            <h3 class ="auth-form__heading">Đăng ký</h3>
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="Name" class="auth-form__input" placeholder="nhập họ và tên">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="Phonenumber" class="auth-form__input" placeholder="nhập số điện thoại">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="Date" class="auth-form__input" placeholder="nhập ngày tháng năm sinh">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="Phonenumber" class="auth-form__input" placeholder="nhập số điện thoại (nếu có)">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="Email" class="auth-form__input" placeholder="nhập email">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="account" class="auth-form__input" placeholder="nhập tài khoản">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="password" class="auth-form__input" placeholder="mật khẩu">
-                        </div>
-
-                        <div class="auth-form__group">
-                            <input type="password" class="auth-form__input" placeholder="nhập lại mật khẩu">
-                        </div>
-
-                        <div class="auth-form__controls">
-                            <button class="btn">Đã có tài khoản</button>
-                            <button class="btn btn--primary">Đăng Ký</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/assets/img/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Chat with me(CWM)</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
